# verilator_pybind_counter

./: CMakeLists.txt  README.md  counter.cpp  counter.v  counter_pybind.cpp  gtkwave.rb  simulate.py
